// Copyright (c) 2020 The Open-Transactions developers
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

#ifndef OPENTXS_PROTO_ASYMMETRICKEY_HPP
#define OPENTXS_PROTO_ASYMMETRICKEY_HPP

#include "VerifyCredentials.hpp"

namespace opentxs
{
namespace proto
{
OPENTXS_PROTO_EXPORT bool CheckProto_1(
    const AsymmetricKey& key,
    const bool silent,
    const CredentialType type,
    const KeyMode mode,
    const KeyRole role);
OPENTXS_PROTO_EXPORT bool CheckProto_2(
    const AsymmetricKey&,
    const bool,
    const CredentialType,
    const KeyMode,
    const KeyRole);
OPENTXS_PROTO_EXPORT bool CheckProto_3(
    const AsymmetricKey&,
    const bool,
    const CredentialType,
    const KeyMode,
    const KeyRole);
OPENTXS_PROTO_EXPORT bool CheckProto_4(
    const AsymmetricKey&,
    const bool,
    const CredentialType,
    const KeyMode,
    const KeyRole);
OPENTXS_PROTO_EXPORT bool CheckProto_5(
    const AsymmetricKey&,
    const bool,
    const CredentialType,
    const KeyMode,
    const KeyRole);
OPENTXS_PROTO_EXPORT bool CheckProto_6(
    const AsymmetricKey&,
    const bool,
    const CredentialType,
    const KeyMode,
    const KeyRole);
OPENTXS_PROTO_EXPORT bool CheckProto_7(
    const AsymmetricKey&,
    const bool,
    const CredentialType,
    const KeyMode,
    const KeyRole);
OPENTXS_PROTO_EXPORT bool CheckProto_8(
    const AsymmetricKey&,
    const bool,
    const CredentialType,
    const KeyMode,
    const KeyRole);
OPENTXS_PROTO_EXPORT bool CheckProto_9(
    const AsymmetricKey&,
    const bool,
    const CredentialType,
    const KeyMode,
    const KeyRole);
OPENTXS_PROTO_EXPORT bool CheckProto_10(
    const AsymmetricKey&,
    const bool,
    const CredentialType,
    const KeyMode,
    const KeyRole);
OPENTXS_PROTO_EXPORT bool CheckProto_11(
    const AsymmetricKey& key,
    const bool silent,
    const CredentialType type,
    const KeyMode mode,
    const KeyRole role);
OPENTXS_PROTO_EXPORT bool CheckProto_12(
    const AsymmetricKey&,
    const bool,
    const CredentialType,
    const KeyMode,
    const KeyRole);
OPENTXS_PROTO_EXPORT bool CheckProto_13(
    const AsymmetricKey&,
    const bool,
    const CredentialType,
    const KeyMode,
    const KeyRole);
OPENTXS_PROTO_EXPORT bool CheckProto_14(
    const AsymmetricKey&,
    const bool,
    const CredentialType,
    const KeyMode,
    const KeyRole);
OPENTXS_PROTO_EXPORT bool CheckProto_15(
    const AsymmetricKey&,
    const bool,
    const CredentialType,
    const KeyMode,
    const KeyRole);
OPENTXS_PROTO_EXPORT bool CheckProto_16(
    const AsymmetricKey&,
    const bool,
    const CredentialType,
    const KeyMode,
    const KeyRole);
OPENTXS_PROTO_EXPORT bool CheckProto_17(
    const AsymmetricKey&,
    const bool,
    const CredentialType,
    const KeyMode,
    const KeyRole);
OPENTXS_PROTO_EXPORT bool CheckProto_18(
    const AsymmetricKey&,
    const bool,
    const CredentialType,
    const KeyMode,
    const KeyRole);
OPENTXS_PROTO_EXPORT bool CheckProto_19(
    const AsymmetricKey&,
    const bool,
    const CredentialType,
    const KeyMode,
    const KeyRole);
OPENTXS_PROTO_EXPORT bool CheckProto_20(
    const AsymmetricKey&,
    const bool,
    const CredentialType,
    const KeyMode,
    const KeyRole);
}  // namespace proto
}  // namespace opentxs

#endif  // OPENTXS_PROTO_ASYMMETRICKEY_HPP
